<resources>
    <string name="app_name">Assess Vulnerability</string>
    <string name="register">Register</string>
    <string name="district">জেলা</string>
    <string name="upazila">উপজেলা</string>
    <string name="union">ইউনিয়ন</string>
    <string name="phone">ফোন নম্বর</string>
    <string name="nid">জাতীয় পরিচয়পত্র নম্বর</string>
    <string name="name">নাম</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="survey">Survey</string>
    <string name="send_button">Send Button</string>
</resources>